src/test/deca/syntax/valid/Objet/ListClasses-EmptyMeth-1Param.deca
// Description:
//      Syntaxically correct program with classes with attributes and empty methods
//
// Result:
//      nothing
//
// History:
//      Created in 17/1/2022

class A {
    int x = 0;
    protected boolean x;
    void test(int x) {
    }
    void test2(int y) {
    }
}

class B {
    int x;
    protected boolean x;
    void test(boolean x) {
    }
}